--- a/content/post/ChineseECRRS.Rmd
+++ b/content/post/ChineseECRRS.Rmd
@@ -21,6 +21,16 @@ ECR–RS的中英文对照见下方：
 
 # 亲密关系体验-人际结构量表(中文版)
 
+## 指导语
+
+下面给出的句子描述了每个人在亲密关系中可能会有的感觉，亲密关系包括你与父母、兄弟姐妹、配偶（恋人）、好朋友、老师（导师）等重要人物的关系。总体而言这些情况在多大程度上与你相符？首先，请根据与母亲（或像母亲一样的人）的交往过程中常常体验到的感受，从七个选项中选出最符合你实际情况的选项。
+
+## 计分尺度
+
+1=非常不符，2=不符合，3=比较不符，4=不确定，5=比较符合，6=符合，7=非常符合。
+
+## 题项内容
+
 题号|中文题项|英文题项
 |----|----------------------------------|-------------------------------------------|
 1.|我不喜欢向她袒露自己内心深处的感受。|I prefer not to show her how I feel deep down.
