--- a/content/post/psychBooksForAllPeople.Rmd
+++ b/content/post/psychBooksForAllPeople.Rmd
@@ -41,7 +41,7 @@ Duckworth, A. (2016). *Grit: The power of passion and perseverance*. Scribner.
 
 **相近主题**：情绪应对，情绪管理
 
-你是否思虑过重以至于没有活在当下？你是否在与负面情绪的肉搏中屡战屡败精疲力尽？下面这本书介绍的接纳承诺疗法对此有帮助。
+你是否思虑过重以至于没有活在当下？你是否在与负面情绪的争斗中屡战屡败精疲力尽？下面这本书介绍的接纳承诺疗法对此有帮助。
 
 Hayes, S. C., Strosahl, K. D., & Wilson, K. G. (2011). *Acceptance and commitment therapy: The process and practice of mindful change*. Guilford Press.
 
