--- a/content/post/psychBooksForAllPeople.Rmd
+++ b/content/post/psychBooksForAllPeople.Rmd
@@ -45,6 +45,12 @@ Duckworth, A. (2016). *Grit: The power of passion and perseverance*. Scribner.
 
 Hayes, S. C., Strosahl, K. D., & Wilson, K. G. (2011). *Acceptance and commitment therapy: The process and practice of mindful change*. Guilford Press.
 
+在上述书籍介绍的ACT疗法中，正念是一种非常关键的技术，你可以将它养成自己的习惯。下面这本书为你提供了丰富的练习，并提供了音频指导语。
+
+Alidina, S. (2020). *Mindfulness for Dummies*. John Wiley & Sons.
+
+[Shamash Alidina. (2014). *正念冥想--遇见更好的自己*. 人民邮电出版社.]
+
 ### 主题：自我调节 (Self regulation)
 
 **相近主题**：自律，自控，自我管理，执行力，行动力
