--- a/content/post/psychBooksForAllPeople.Rmd
+++ b/content/post/psychBooksForAllPeople.Rmd
@@ -45,7 +45,7 @@ Duckworth, A. (2016). *Grit: The power of passion and perseverance*. Scribner.
 
 Hayes, S. C., Strosahl, K. D., & Wilson, K. G. (2011). *Acceptance and commitment therapy: The process and practice of mindful change*. Guilford Press.
 
-在上述书籍介绍的ACT疗法中，正念是一种非常关键的技术，你可以将它养成自己的习惯。下面这本书为你提供了丰富的练习，并提供了音频指导语。
+在上述书籍介绍的ACT疗法中，正念是一种非常关键的技术。简单来讲，正念是一种注意力训练。下面这本书为你提供了丰富的练习，并提供了音频指导语。
 
 Alidina, S. (2020). *Mindfulness for Dummies*. John Wiley & Sons.
 
